# toadefi

./: .gitmodules  Cargo.toml  build.rs
proto/: vertex_cancel_order.proto  vertex_execute.proto  vertex_place_order.proto  vertex_products.proto  vertex_query.proto  vertex_symbols.proto
proto/vertex/: trading_service.proto  vertex_products.proto  vertex_query.pb.go  vertex_query.pb.gw.go  vertex_query.proto  vertex_query_grpc.pb.go
src/: main.rs
src/api/: handlers.rs  mod.rs
src/config/: mod.rs
src/connectors/: mod.rs
src/connectors/shared/: websocket.rs
src/connectors/vertex/: gateway_client.rs  mod.rs  payload_signer.rs  subscription_client.rs  vertex_auth.rs
src/connectors/vertex/utils/: mod.rs  signer.rs  stream_authentication.rs
src/domain/models/vertex/: mod.rs  serializable_structs.rs  sol_structs.rs
src/services/: trading_service.rs
src/services/vertex/: client.rs  execute.rs  helper.rs  mod.rs  query.rs
src/shared/utils/: eth_signer.rs  mod.rs  type_conv.rs  websocket_utils.rs
src/utils/: mod.rs
src/utils/errors/: api_error.rs  connect_error.rs  mod.rs
vertex/: vertex_query.swagger.json
