[package]
name = "toadefi_hft"
version = "0.1.0"
edition = "2021"
authors = ["Atharva Pandey @gopherine"]


[dependencies]
ethsign = "0.9"
web3 = "0.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
sha3 = "0.10.8"
alloy-sol-types = "0.6.0"
alloy-sol-macro = "0.6.0"
alloy-primitives = "0.6.0"
reqwest = "0.11.23"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
tungstenite = "0.21"
native-tls = "0.2"
futures-util = "0.3"
lazy_static = "1.4"
once_cell = "1.19"
url = "2.5.0"
futures = "0.3.30"
dotenvy = "0.15.7"
log = "0.4.20"
tonic = "0.10"
tonic-web = "0.10"
prost-types = "0.12"
prost = "0.12"
tower-http = { version = "0.4", features = [
    "cors",
] } # incompaitiblity issue hence downgraded
http = "1"
tonic-reflection = "0.10.2"
axum = { version = "0.7.4", features = ["macros"] }
tracing = "0.1"
tracing-subscriber = "0.3"
env_logger = "0.11.2"
regex = "1.10.3"


[build-dependencies]
tonic-build = "0.10"
prost-build = "0.12"
